--- a/lab1/server/package.json
+++ b/lab1/server/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-logging": "^1.1.1",
+    "logops": "^2.1.1"
   },
   "devDependencies": {
     "express-swagger-generator": "^1.1.17"
